@@ -3,5 +3,6 @@
     "default-prefix": "ts!",
     "prefix": "-",
     "join-left-channel": "channel id (for join and left logs)",
-    "report-channel": "channel id (to store reports)"
+    "report-channel": "channel id (to store reports)",
+    "mute-role-id": "role id (to identify muted users)"
 }
